--- a/app/src/main/res/layout/status_widget_configure.xml
+++ b/app/src/main/res/layout/status_widget_configure.xml
@@ -12,10 +12,18 @@
         android:text="@string/configure" />
 
     <EditText
-        android:id="@+id/appwidget_text"
+        android:id="@+id/etUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text" />
+        android:hint="Username"
+        android:inputType="textWebEmailAddress" />
+
+    <EditText
+        android:id="@+id/etPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Password"
+        android:inputType="text|textPassword" />
 
     <Button
         android:id="@+id/add_button"
