Add reconfigurable feature

--- a/app/src/main/res/xml/status_widget_info.xml
+++ b/app/src/main/res/xml/status_widget_info.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:configure="it.mumu.jibblewidget.StatusWidgetConfigureActivity"
+    android:widgetFeatures="reconfigurable"
     android:initialKeyguardLayout="@layout/status_widget"
     android:initialLayout="@layout/status_widget"
     android:minWidth="40dp"
