--- a/app/src/main/res/layout/status_widget_configure.xml
+++ b/app/src/main/res/layout/status_widget_configure.xml
@@ -25,6 +25,13 @@
         android:hint="Password"
         android:inputType="text|textPassword" />
 
+    <EditText
+        android:id="@+id/etInterval"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Interval (min)"
+        android:inputType="number" />
+
     <Button
         android:id="@+id/add_button"
         android:layout_width="wrap_content"
