--- a/app/src/main/res/xml/status_widget_info.xml
+++ b/app/src/main/res/xml/status_widget_info.xml
@@ -6,7 +6,7 @@
     android:initialLayout="@layout/status_widget"
     android:minWidth="40dp"
     android:minHeight="40dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@drawable/jibble"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="0"
     android:widgetCategory="home_screen"></appwidget-provider>
