--- a/app/src/main/res/layout/status_widget.xml
+++ b/app/src/main/res/layout/status_widget.xml
@@ -10,6 +10,14 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/jibble" />
+        android:visibility="visible"
+        app:srcCompat="@drawable/jibble_unknown" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
 
 </LinearLayout>
